Adds link to browse-movies in nav.

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li><a href="/client/" id="home-router">Home</a></li>
                     <li><a href="/client/browse-movies.html" id="browse-router">Browse Movies</a></li>
+                    <li><a href="/client/view-movies.html" id="view-router">View Movies</a></li>
                     <li><a href="/client/write-movies.html" id="write-router">Add a Movie</a></li>
                     <li><a href="https://www.imdb.com" id="imdb-external" target="_blank">Visit IMDb &#11111;</a></li>
                 </ul>
