--- a/client/write-movies.html
+++ b/client/write-movies.html
@@ -6,6 +6,7 @@
 
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="/client/js/config.js"></script>
     <script src="/client/js/write-movies.js" defer></script>
     <link rel="stylesheet" href="css/all.css">
@@ -36,40 +37,40 @@
             </header>
 
             <main>
-                <section>
+                <section data-ng-app="writeMoviesApp" data-ng-controller="writeMoviesController" id="writeMoviesApp">
                     <p>Reference <a href="https://www.imdb.com/chart/top/" target="_blank">IMDb's Top 250 Movies</a> to add movie data.</p>
                     <form>
                         <div>
                             <label for="rank">Rank</label>
-                            <input type="number" id="rank" name="rank" size="30" required>
+                            <input type="number" id="rank" name="rank" size="30" data-ng-model="rank" required>
                         </div>
                         <div>
                             <label for="movieTitle">Movie Title</label>
-                            <input type="text" id="movieTitle" name="movieTitle" size="30" required>
+                            <input type="text" id="movieTitle" name="movieTitle" size="30" data-ng-model="movieTitle" required>
                         </div>
                         <div>
                             <label for="year">Year</label>
-                            <input type="number" id="year" name="year" size="30" required>
+                            <input type="number" id="year" name="year" size="30" data-ng-model="year" required>
                         </div>
                         <div>
                             <label for="director">Director</label>
-                            <input type="text" id="director" name="director" size="30" required>
+                            <input type="text" id="director" name="director" size="30" data-ng-model="director" required>
                         </div>
                         <div>
                             <label for="rating">Rating</label>
-                            <input type="text" id="rating" name="rating" size="30" required>
+                            <input type="text" id="rating" name="rating" size="30" data-ng-model="rating" required>
                         </div>
                         <div>
                             <label for="users">Users</label>
-                            <input type="number" id="users" name="users" size="30" required>
+                            <input type="number" id="users" name="users" size="30" data-ng-model="users" required>
                         </div>
                         <div id="save_button">
-                            <button id="data-submit">Submit Movie</button>
+                            <button id="data-submit" data-ng-click="submitMovie()">Submit Movie</button>
                         </div>
                     </form>
 
                     <div id="success-added">
-                        <p>Movie record successfully added.</p>
+                        {{ addResults }}
                     </div>
                 </section>
             </main>
