--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -5,7 +5,6 @@
     <title>Browse Movies</title>
 
     <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="/client/js/config.js"></script>
     <script src="/client/js/browse-movies.js" defer></script>
@@ -36,7 +35,7 @@
                 <h1>IMDb Top Rated Movies</h1>
             </header>
 
-            <main data-ng-app="browseMoviesApp" data-ng-controller="browseMoviesController" id="browseMoviesApp">
+            <main id="browseMoviesApp">
 
                 <section data-ng-app="moviesTableApp" data-ng-controller="moviesTableController">
                     <div style="margin: 30px auto; text-align:center;">
