Uncomments success HTML for adding movie.

--- a/client/write-movies.html
+++ b/client/write-movies.html
@@ -68,9 +68,7 @@
                             <button id="data-submit" data-ng-click="submitMovie()">Submit Movie</button>
                         </div>
                     </form>
-
-                    <div style="background-color: gray;">
-                        <!--<div id="success-added">-->
+                        <div id="success-added">
                         {{ addResults }}
                     </div>
                 </section>
