--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -39,8 +39,8 @@
 
                 <section data-ng-app="moviesTableApp" data-ng-controller="moviesTableController">
                     <div style="margin: 30px auto; text-align:center;">
-                        <label for="groupBy">Year: </label>
-                        <select id="groupBy" data-ng-model="selectedType" data-ng-options="year.display for year in years" data-ng-change="redrawTable()"></select>
+                        <label for="groupBy">Director: </label>
+                        <select id="groupBy" data-ng-model="selectedType" data-ng-options="director.display for director in directors" data-ng-change="redrawTable()"></select>
                     </div>
                     <div>
                         <table>
@@ -60,7 +60,7 @@
                                 <td>{{ obj.director }}</td>
                                 <td>{{ obj.rating }}</td>
                                 <td>{{ obj.users }}</td>
-                                <td><button data-ng-click="deleteMovie(obj.movieTitle)">DELETE</button></td>
+                                <td><button data-ng-click="deleteMovie(obj['_id'])">DELETE</button></td>
                             </tr>
                         </table>
                     </div>
