Cleanup after merge.

--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -54,7 +54,7 @@
                                 <th></th>
                                 <th></th>
                             </tr>
-                            <<<<<<< HEAD <tr data-ng-repeat="movie in moviedata">
+                            <tr data-ng-repeat="movie in moviedata">
                                 <td>{{ movie.rank }}</td>
                                 <td>{{ movie.movieTitle }}</td>
                                 <td>{{ movie.year }}</td>
@@ -63,8 +63,7 @@
                                 <td>{{ movie.users }}</td>
                                 <td><button data-ng-click="editMovie($index)">EDIT</button></td>
                                 <td><button data-ng-click="deleteMovie(obj.movieTitle)">DELETE</button></td>
-                                >>>>>>> 7277bc5424ee65bb9db037bf1da4c522dccfe87b
-                                </tr>
+                            </tr>
                         </table>
                     </div>
 
