Fixes a few more code typos.

--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -97,8 +97,8 @@
                         </div>
                     </div>
 
-                    <div class="update_button"><button ng-data-click="updateMovie()">Update</button></div>
-                    <div class="cancel_button"><button ng-data-click="closeForm()">Cancel</button></div>
+                    <div class="update_button"><button data-ng-click="updateMovie()">Update</button></div>
+                    <div class="cancel_button"><button data-ng-click="closeForm()">Cancel</button></div>
                 </section>
 
             </main>
