Adds sort functionality to all fields and filter.

--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -42,6 +42,10 @@
                         <label for="groupBy">Director: </label>
                         <select id="groupBy" data-ng-model="selectedDirector" data-ng-options="director.display for director in directors" data-ng-change="redrawTable()"></select>
                     </div>
+                    <div style="margin: 30px auto; text-align:center;">
+                        <label for="sortBy">Sort By: </label>
+                        <select id="sortBy" data-ng-model="selectedSortBy" data-ng-options="field.display for field in sortBy" data-ng-change="sortTable()"></select>
+                    </div>
                     <div>
                         <table>
                             <tr>
