Updates data types for input fields.

--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -77,27 +77,27 @@
                     <div class="update_fields">
                         <div>
                             <label for="rank">Rank:</label>
-                            <input id="rank" data-ng-model="rank">
+                            <input type="number" name="rank" size="30" id="rank" data-ng-model="rank" required>
                         </div>
                         <div>
                             <label for="movieTitle">Movie Title:</label>
-                            <input id="movieTitle" data-ng-model="movieTitle">
+                            <input type="text" name="movieTitle" size="30" id="movieTitle" data-ng-model="movieTitle" required>
                         </div>
                         <div>
                             <label for="year">Year:</label>
-                            <input id="year" data-ng-model="year">
+                            <input type="number" name="year" size="30" id="year" data-ng-model="year" required>
                         </div>
                         <div>
                             <label for="director">Director:</label>
-                            <input id="director" data-ng-model="director">
+                            <input type="text" name="director" size="30" id="director" data-ng-model="director" required>
                         </div>
                         <div>
                             <label for="rating">Rating:</label>
-                            <input id="rating" data-ng-model="rating">
+                            <input type="number" name="rating" size="30" id="rating" data-ng-model="rating" required>
                         </div>
                         <div>
                             <label for="users">Users:</label>
-                            <input id="users" data-ng-model="users">
+                            <input type="number" name="users" size="30" id="users" data-ng-model="users" required>
                         </div>
                     </div>
 
