Adjusts rating type due to display number.

--- a/client/browse-movies.html
+++ b/client/browse-movies.html
@@ -93,7 +93,7 @@
                         </div>
                         <div>
                             <label for="rating">Rating:</label>
-                            <input type="number" name="rating" size="30" id="rating" data-ng-model="rating" required>
+                            <input type="text" name="rating" size="30" id="rating" data-ng-model="rating" required>
                         </div>
                         <div>
                             <label for="users">Users:</label>
