--- a/client/write-movies.html
+++ b/client/write-movies.html
@@ -58,7 +58,7 @@
                         </div>
                         <div>
                             <label for="rating">Rating</label>
-                            <input type="number" id="rating" name="rating" size="30" data-ng-model="rating" required>
+                            <input type="text" id="rating" name="rating" size="30" data-ng-model="rating" required>
                         </div>
                         <div>
                             <label for="users">Users</label>
